2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented type of offset and num for tellWaiting xml-rpc method.
	* doc/aria2c.1.txt

2009-07-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Implemented getVersion xml-rpc method. This method returns struct
	which has 2 key-value pairs: "version" key is associated to the
	version of aria2, such as "1.5.0". "enabledFeatures" key is
	associated to the list of enabled features, such as "Async DNS",
	"BitTorrent".
	* src/FeatureConfig.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed TLS1.1 protocol support when aria2 is built with gnutls
	for compatibility issue.
	* src/SocketCore.cc

2009-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error with openSSL
	* src/bittorrent_helper.cc
	* src/messageDigest.h

2009-07-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed bad code: setting certificate type priority to key
	exchange priority.
	* src/SocketCore.cc

2009-07-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Disconnect seeder if client is also in seed state.
	* src/BtBitfieldMessage.cc
	* src/BtHaveAllMessage.cc
	* src/BtHaveMessage.cc
	* src/message.h
	* test/BtBitfieldMessageTest.cc
	* test/BtHaveAllMessageTest.cc
	* test/BtHaveMessageTest.cc
	* test/MockPieceStorage.h

2009-07-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Keep CreateRequestCommand in queue when no segment is available so
	that they can pick up pieces which slow BitTorrent peers are
	downloading.
	* src/AbstractCommand.cc
	* src/CreateRequestCommand.cc
	* src/CreateRequestCommand.h

2009-07-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	--bt-stop-timeout now only checks download speed.
	* src/BtStopDownloadCommand.cc
	* src/BtStopDownloadCommand.h
	* src/BtSetup.cc